--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,31 @@
 FROM node:18-alpine
 
+# Criar diretório de trabalho
 WORKDIR /app
 
+# Copiar package.json e package-lock.json (se existir)
 COPY package*.json ./
-RUN npm install
 
+# Instalar dependências
+RUN npm ci --only=production
+
+# Copiar código da aplicação
 COPY . .
 
+# Criar usuário não-root para segurança
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+# Mudar propriedade dos arquivos
+RUN chown -R nodejs:nodejs /app
+USER nodejs
+
+# Expor porta
 EXPOSE 3001
 
-CMD ["npm", "start"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3001/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+
+# Comando para iniciar
+CMD ["node", "server.js"]
